# finsim

./: .gitignore  CNAME  ISSUES.md  Makefile  README.md  SIMULATION_FLOW.md  analyze_annuity_difference.py  analyze_trajectory.py  app.py  app_new.py  calculate_annuity_returns.py  calculate_higher_mortality_irr.py  calculate_mortality_adjusted_irr.py  calculate_taxes_years_1_and_10.py  detailed_withdrawal_example.py  execute_notebook.py  execute_notebook_small.py  growth_factors_debug.npy  lump_sum_vs_dca_analysis.py  monte_carlo.py  personal_injury_settlement_spy.ipynb  personal_injury_settlement_stacked.ipynb  pyproject.toml  requirements-lock.txt  requirements.txt  run.sh  run_spy_simulation.py  run_spy_simulation_quick.py  sample_simulation_walkthrough.py  spy_vt_bollinger_bands.py  test_annuity_fix.py  test_basic_functionality.py  test_death_portfolios.py  test_enhanced_mortality.py  test_extreme_bug.py  test_input_validation_standalone.py  test_mortality_simple.py  test_rng.py  test_spy_direct.py  test_spy_simple.py  (+3 more)
.github/workflows/: docs.yml  release.yml  test.yml
_build/logs/: myst.build.json
docs/: _config.yml  _toc.yml  architecture.md  basic_simulation.ipynb  examples.md  inflation_indexing.md  intro.md  mortality.md  quickstart.md  simulation.md  simulation_flow.md
examples/: vectorized_example.py
finsim/: __init__.py  annuity.py  cola.py  data_fetcher.py  enhanced_monte_carlo.py  inflation.py  monte_carlo.py  mortality.py  mortality_bayesian.py  mortality_enhanced.py  mortality_honest.py  mortality_modern.py  mortality_projection.py  portfolio_simulation.py  portfolio_simulation_v2.py  return_generator.py  simulation.py  stacked_simulation.py  tax.py  tax_calculator.py  tax_old.py  vectorized_tax.py
finsim-web/: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
finsim-web/backend/: Dockerfile  app.py  market_models.py  professional_models.py  requirements.txt  scenarios.py  simulation.py
finsim-web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
finsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
finsim/data/: ssa_mortality.json
finsim/market/: __init__.py  fetcher.py
issues/: use_policyengine_projections.md
mortalitypy/: README.md
scripts/: fetch_ssa_mortality.py
tests/: __init__.py  conftest.py  test_annuity.py  test_data_fetcher.py  test_input_validation.py  test_integration_examples.py  test_market_fetcher.py  test_monte_carlo.py  test_mortality.py  test_mortality_projection.py  test_portfolio_simulation.py  test_return_generator.py  test_simulation.py  test_spouse_functionality.py  test_stacked_simulation.py  test_streamlit_app.py  test_success_counting.py  test_tax.py  test_tax_calculator.py  test_withdrawal_capping.py
(+25 files in other folders)
